# parse-the-docs

./: AGENTS.md  LEARNINGS.md  README.md  SUMMARY.md  environment.yml  pyproject.toml
src/: notes_server.py  pdf_server.py
src/data/notes/: notes.json
src/utils/: docx_utils.py  embeddings.py  notes_utils.py  pdf_utils.py
tests/: debug_client.py  test_client.py  test_placeholder.py
